<resources>
    <string name="app_name">AR Ground</string>
    <string name="title_explore">Explore</string>

    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="search_term">Ex. Cats…</string>
    <string name="keyword">Keyword</string>
    <string name="select">Select</string>
    <string name="rendering_load">Rendering 3D Object…</string>
    <string name="ok">OK</string>
    <string name="copy">Copy to Clipboard</string>
    <string name="results">Results</string>

    <string name="about">About</string>
    <string name="search_google_poly">Search Google Poly</string>
    <string name="view_private_object">View Private Object</string>
    <string name="enter_4_digit_code">Enter 4 digit code</string>
    <string name="open_camera">Open Camera</string>
    <string name="help">Help</string>
    <string name="get_models">Fetching models</string>
    <string name="not_shared">Not shared</string>
    <string name="shared">Shared</string>
    <string name="back_butt">Back</string>
    <string name="next">Continue</string>
    <string name="generate">Generate</string>

    <string name="instructions_noshare">
        In the camera view, hold the phone as flat/horizontal as possible to the ground and move the phone in a smooth, circular motion
        following the guide. You should see a collection of dots appear after a few seconds which represent an anchor point for the model. Tap them
        to render it.
    </string>

    <string name="instructions_share">
        Select the share button and after rendering the model a shareable code will be generated. Another phone can enter
        this code on the Explore screen. Point the camera in the general area and press resolve to render the model.
        \n\nNote: Anchor points only last 24 hours due to AR limitations.
    </string>

    <string name="problems">
        Dots not appearing: The app uses feature points to detect planes so the surface may be too reflective or smooth.
        Try on another surface, or try backing out and in to the camera again.
        \n\nModel not appearing: Some models are highly complex, depending on your phone\'s hardware they may cause issues or
        not render properly. There are very large models which may be placed above your head, try looking up.
    </string>
    <string name="prob_tutle">Problems</string>

</resources>
