<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/thumbail_layout"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight">

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>


    <ImageView
        android:id="@+id/expand_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:ignore="ContentDescription"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_margin="10dp"/>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#e0e0e0"
        android:id="@+id/share_radio_group"
        android:checkedButton="@+id/not_shared"
        android:padding="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/not_shared"
            android:text="@string/not_shared"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/share_priv"
            android:text="@string/shared"/>

        </RadioGroup>

    <Button
        android:id="@+id/place_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/cancel_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_butt"
        tools:ignore="ButtonOrder" />





</LinearLayout>