<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    >



        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_google_poly"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/keyword" />

                <EditText
                    android:id="@+id/search_assets"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:padding="10dp"
                    android:hint="@string/search_term"
                    android:inputType="text"

                    android:background="@drawable/rounded_border_edittext"
                    tools:ignore="Autofill"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/cat_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/category"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/rounded_border_edittext"
                    android:prompt="@string/category"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/res_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/results"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <Spinner
                    android:id="@+id/results_spinner"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/rounded_border_edittext"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btnSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@android:drawable/ic_search_category_default"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    />

            </LinearLayout>

        </android.support.design.card.MaterialCardView>

        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"

            xmlns:android="http://schemas.android.com/apk/res/android">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_private_object"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/private_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"
                    android:hint="@string/enter_4_digit_code"
                    android:inputType="text"
                    android:background="@drawable/rounded_border_edittext"
                    tools:ignore="Autofill"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/private_cam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_camera" />

            </LinearLayout>

        </android.support.design.card.MaterialCardView>


    </LinearLayout>

